# neural_net

./: .gitignore  Cargo.toml
resources/: train_mnist.bincode.REMOVED.git-id
src/: lib.rs  load_mnist.rs  main.rs
