[package]
name = "neural_net"
version = "0.1.0"
authors = ["Balthazar Potet <balthazarpotet@gmail.com>"]

[dependencies]
itertools = "0.7.4"
rand = "0.4.1"
serde = "1.0.26"
serde_json = "1.0"
bincode = "0.9.2"
rmp-serde = "0.13.7"

[dependencies.nalgebra]
version = "0.13.0"
features = ["serde-serialize"]